# rs-uploader

./: .env.example  .gitignore  Cargo.toml
src/: cli.yaml  main.rs
