[package]
name = "rs-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-s3 = { version = "0.28.0", features = ["blocking"] }
uuid = { version = "0.4", features = ["v4"] }
clap = { version = "3.0.0-beta.5", default-features = false, features = [
    "std",
    "yaml",
    "cargo",
    "color",
    "env",
    "suggestions",
] }
chrono = "0.4"
