[package]
name = "rs-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-s3 = { version = "0", default-features = false, features = [
    "sync",
    "sync-native-tls",
] }
clap = { version = "3", features = ["derive"] }
clipboard = "0"
chrono = "0"
load-dotenv = "0"
nanoid = "0"
notify = "4"
notify-rust = "4"
tray-item = "0"
